--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                                         <img class="ask-icon" src="./img/add_for_ask.svg" alt="黃色加入以詢問">
                                         <div class="product-img-hover">
                                             <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="黃色加入以詢問">
-                                            <a href="./distribution.html" class="commodity-more-button btn" title="">
+                                            <a href="./distribution.html" class="commodity-more-button btn" title="更多商品">
                                                 MORE
                                             </a>
                                         </div>
@@ -231,7 +231,7 @@
                                         <img class="ask-icon" src="./img/add_for_ask.svg" alt="黃色加入以詢問">
                                         <div class="product-img-hover">
                                             <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="黃色加入以詢問">
-                                            <a href="./popwindow.html" class="commodity-more-button btn">
+                                            <a href="./popwindow.html" class="commodity-more-button btn"  title="更多商品">
                                                 MORE
                                             </a>
                                         </div>
@@ -256,7 +256,7 @@
                                         <img class="ask-icon" src="./img/add_for_ask.svg" alt="黃色加入以詢問">
                                         <div class="product-img-hover">
                                             <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="黃色加入以詢問">
-                                            <a href="./distribution-confirm.html" class="commodity-more-button btn">
+                                            <a href="./distribution-confirm.html" class="commodity-more-button btn" title="更多商品">
                                                 MORE
                                             </a>
                                         </div>
@@ -281,7 +281,7 @@
                                         <img class="ask-icon" src="./img/add_for_ask.svg" alt="黃色加入以詢問">
                                         <div class="product-img-hover">
                                             <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="黃色加入以詢問">
-                                            <a href="./chiu.html" class="commodity-more-button btn">
+                                            <a href="./chiu.html" class="commodity-more-button btn" title="更多商品">
                                                 MORE
                                             </a>
                                         </div>
@@ -306,7 +306,7 @@
                                         <img class="ask-icon" src="./img/add_for_ask.svg" alt="黃色加入以詢問">
                                         <div class="product-img-hover">
                                             <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="黃色加入以詢問">
-                                            <a href="https://tigersugar.com/" class="commodity-more-button btn">
+                                            <a href="https://tigersugar.com/" class="commodity-more-button btn" title="更多商品">
                                                 MORE
                                             </a>
                                         </div>
@@ -331,7 +331,7 @@
                                         <img class="ask-icon" src="./img/add_for_ask.svg" alt="黃色加入以詢問">
                                         <div class="product-img-hover">
                                             <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="黃色加入以詢問">
-                                            <a href="" class="commodity-more-button btn">
+                                            <a href="" class="commodity-more-button btn" title="更多商品">
                                                 MORE
                                             </a>
                                         </div>
@@ -357,7 +357,7 @@
                             <img class="next-prev-img" src="./img/commodity-prev.svg" alt="swiper上一個按鈕">
                         </div>
                     </div>
-                    <a href="" class="distribution-area-button ">更多商品</a>
+                    <a href="" class="distribution-area-button" title="更多商品">更多商品</a>
                 </div>
             </div>
             </div>
@@ -372,7 +372,8 @@
                     <div class="container">
                         <div class="title df">
                             <div class="title-icon">
-                                <img src="/images/nav/icon1-3.png">
+                                <img src="/images/nav/icon1-3.png"
+                                alt="產品圖片">
                             </div>
                             <div class="title-name">
                                 <h1 class="menu-text">熱門經典</h1>
@@ -905,7 +906,7 @@
                 <div class="swiper mySwiper-news">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <a target="_blank" href="https://www.popdaily.com.tw/food/962274">
+                            <a target="_blank" href="https://www.popdaily.com.tw/food/962274" title="波波黛莉夏季新推連結">
                                 <div class="outer-card">
                                     <div class="card">
                                         <div id="news-img-1" class="news-img">
@@ -921,7 +922,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a target="_blank" href="https://www.popdaily.com.tw/food/837759">
+                            <a target="_blank" href="https://www.popdaily.com.tw/food/837759" title="波波黛莉麻糬瀑布連結">
                                 <div class="outer-card">
                                     <div class="card">
                                         <div id="news-img-2" class="news-img">
@@ -938,7 +939,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a target="_blank" href="http://rubylife5.pixnet.net/blog/post/205382619">
+                            <a target="_blank" href="http://rubylife5.pixnet.net/blog/post/205382619" title="痞客邦人氣排隊美食部落格">
                                 <div class="outer-card">
                                     <div class="card">
                                         <div id="news-img-3" class="news-img">
@@ -954,7 +955,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a target="_blank" href="https://fairylolita.com/post-460835903/">
+                            <a target="_blank" href="https://fairylolita.com/post-460835903/" title="fairylolita部落格">
                                 <div class="outer-card">
                                     <div class="card">
                                         <div id="news-img-4" class="news-img">
@@ -970,7 +971,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a target="_blank" href="https://hoolee.tw/tigersugar-kaohsiung">
+                            <a target="_blank" href="https://hoolee.tw/tigersugar-kaohsiung" title="hoolee.tw部落格">
                                 <div class="outer-card">
                                     <div class="card">
                                         <div id="news-img-5" class="news-img">
@@ -988,7 +989,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a target="_blank" href="https://wp.me/paQ529-7W">
+                            <a target="_blank" href="https://wp.me/paQ529-7W" title="kaikay.tw部落格">
                                 <div class="outer-card">
                                     <div class="card">
                                         <div id="news-img-6" class="news-img">
@@ -1005,7 +1006,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a target="_blank" href="https://fairylolita.com/tigersugar-taoyuan">
+                            <a target="_blank" href="https://fairylolita.com/tigersugar-taoyuan" title="fairylolita部落格">
                                 <div class="outer-card">
                                     <div class="card">
                                         <div id="news-img-7" class="news-img">
@@ -1021,7 +1022,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a target="_blank" href="https://orange-dog.com/tigersugar/">
+                            <a target="_blank" href="https://orange-dog.com/tigersugar/" title="orange-dog部落格">
                                 <div class="outer-card">
                                     <div class="card">
                                         <div id="news-img-8" class="news-img">
@@ -1037,7 +1038,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a target="_blank" href="http://pai0916.pixnet.net/blog/post/349179109">
+                            <a target="_blank" href="http://pai0916.pixnet.net/blog/post/349179109" title="痞客邦部落格">
                                 <div class="outer-card">
                                     <div class="card">
                                         <div id="news-img-9" class="news-img">
@@ -1054,7 +1055,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a target="_blank" href="http://hululu.tw/tigersugar/">
+                            <a target="_blank" href="http://hululu.tw/tigersugar/" title="hululu.tw部落格">
                                 <div class="outer-card">
                                     <div class="card">
                                         <div id="news-img-10" class="news-img">
@@ -1071,7 +1072,8 @@
                         </div>
                         <div class="swiper-slide">
                             <a target="_blank"
-                                href="http://peko721.pixnet.net/blog/post/46674267-%E3%80%90%E4%BF%A1%E7%BE%A9%E5%8D%80%E6%89%8B%E6%90%96%E9%A3%B2%E6%8E%A8%E8%96%A6%E3%80%91%E8%80%81%E8%99%8E%E5%A0%82tigersugar-att%E4%BF%A1%E7%BE%A9">
+                                href="http://peko721.pixnet.net/blog/post/46674267-%E3%80%90%E4%BF%A1%E7%BE%A9%E5%8D%80%E6%89%8B%E6%90%96%E9%A3%B2%E6%8E%A8%E8%96%A6%E3%80%91%E8%80%81%E8%99%8E%E5%A0%82tigersugar-att%E4%BF%A1%E7%BE%A9"
+                                title="痞客邦部落格">
                                 <div class="outer-card">
                                     <div class="card">
                                         <div id="news-img-11" class="news-img">
@@ -1087,7 +1089,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a target="_blank" href="https://kel8257.pixnet.net/blog/post/355514156">
+                            <a target="_blank" href="https://kel8257.pixnet.net/blog/post/355514156" title="痞客邦部落格">
                                 <div class="outer-card">
                                     <div class="card">
                                         <div id="news-img-12" class="news-img">
@@ -1126,7 +1128,7 @@
                 </div>
                 <div class="franchisee-container-big">
                     <div class="franchisee-container-animation" data-aos="zoom-in">
-                        <a href="" class="franchisee-link">
+                        <a href="" class="franchisee-link" title="加盟專區連結">
                             <div class="join-us-img">
                                 <div class="join-us-info">
                                     <h2> <i class="bi bi-star-fill"></i>&nbspJoin Our Franchise! <i class="bi bi-star-fill"></i>
