--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
 
     <!-- 各分頁css -->
+    <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/banner.css">
     <link rel="stylesheet" href="./css/about.css">
     <link rel="stylesheet" href="./css/social.css">
@@ -33,14 +34,253 @@
     <link rel="stylesheet" href="./css/news.css">
     <link rel="stylesheet" href="./css/franchisee.css">
     <link rel="stylesheet" href="./css/media.css">
-    
+    <link rel="stylesheet" href="./css/footer.css">
     <!-- 專頁css結束 -->
 
 </head>
 
 <body>
     <!-- 秋 header -->
-    <header></header>
+    <header>
+        <nav>
+            <section class="nav-logo">
+                <a href="https://tigersugar.com/"></a>
+                <img class="nav-logo-btn" src="./img/LOGO.png" alt="tiger-logo">
+            </section>
+
+            <section class="nav-main">
+                <section class="main-menu">
+                    <!----------------------------- 關於我們 ------------------------------------>
+                    <div class="about">
+                        <a href="#section_about_us" class="about-link">
+                            <div class="about-img">
+                                <div class="main-menu-img">
+                                    <img class="main-menu-about" src="./img/icon1.png" alt="about-icon">
+                                    <img class="main-menu-about-gold" src="./img/icon1_gold.png" alt="about-icon">
+                                </div>
+                            </div>
+                            <div class="main-menu-text">
+                                <div class="text-ch">關於我們</div>
+                                <div class="text-en">ABOUT</div>
+                            </div>
+                        </a>
+                    </div>
+                    <!----------------------------- 產品經銷 ------------------------------------>
+                    <div class="distribution">
+                        <a href="#distribution" class="distribution-link">
+                            <div class="main-menu-img">
+                                <img class="main-menu-distribution" src="./img/icon6.png"
+                                    alt="distribution-icon">
+                                <img class="main-menu-distribution-gold" src="./img/icon6_gold.png"
+                                    alt="distribution-gold-icon">
+                            </div>
+                            <div class="main-menu-text">
+                                <span class="text-ch">產品經銷</span>
+                                <span class="text-en">DISTRIBUTION</span>
+                            </div>
+                        </a>
+                    </div>
+                    <!----------------------------- 熱門經典 ------------------------------------>
+                    <div class="classic">
+                        <a href="#section_classical" class="classic-link">
+                            <div class="main-menu-img">
+                                <img class="main-menu-classic" src="./img/icon3.png" alt="classic-icon">
+                                <img class="main-menu-classic-gold" src="./img/icon3_gold.png"
+                                    alt="classic-gold-icon">
+                            </div>
+                            <div class="main-menu-text">
+                                <span class="text-ch">熱門經典</span>
+                                <span class="text-en">CLASSIC</span>
+                            </div>
+                        </a>
+                    </div>
+                    <!----------------------------- 媒體露出 ------------------------------------>
+                    <div class="media">
+                        <a href="#section_media" class="media-link">
+                            <div class="main-menu-img">
+                                <img class="main-menu-media" src="./img/icon4.png" alt="media-icon">
+                                <img class="main-menu-media-gold" src="./img/icon4_gold.png" alt="media-icon-icon">
+                            </div>
+                            <div class="main-menu-text">
+                                <span class="text-ch">媒體露出</span>
+                                <span class="text-en">MEDIA</span>
+                            </div>
+                        </a>
+                    </div>
+                    <!----------------------------- 加盟專區 ------------------------------------>
+                    <div class="franchisee">
+                        <a href="#section_franchisee" class="franchisee-link">
+                            <div class="main-menu-img">
+                                <img class="main-menu-franchisee" src="./img/icon5.png" alt="franchisee-icon">
+                                <img class="main-menu-franchisee-gold" src="./img/icon5_gold.png"
+                                    alt="franchisee-gold-icon">
+                            </div>
+                            <div class="main-menu-text">
+                                <span class="text-ch">加盟專區</span>
+                                <span class="text-en">FRANCHISEE</span>
+                            </div>
+                        </a>
+                    </div>
+
+                </section>
+                <!----------------------------- 社群連結 ------------------------------------>
+                <section class="social-menu">
+                    <div class="social-menu-main">
+                        <div class="social-menu-icon">
+                            <a href="https://www.facebook.com/twtigersugar/">
+                                <img class="social-menu-icon-fb" src="./img/fb.png" alt="icon-fb">
+                            </a>
+                        </div>
+
+                        <div class="social-menu-icon">
+                            <a href="https://www.instagram.com/twtigersugar/">
+                                <img class="social-menu-icon-ig" src="./img/ig.png" alt="social-menu-icon-ig">
+                            </a>
+                        </div>
+                    </div>
+                    <!----------------------------- 語言選擇 ------------------------------------>
+                    <section class="language-menu ">
+                        <div class="language-position">
+                            <div class="drop-down-menu">
+                                <a href="#">LANGUAGE &dtrif;</a>
+                            </div>
+                            <div class="drop-down-menu-sub">
+                                <div class="dropdown-content-ch">
+                                    <a href="https://tigersugar.com/">繁體中文</a>
+                                </div>
+                                <div class="dropdown-content-en">
+                                    <a href="https://en.tigersugar.com/">English</a>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                </section>
+            </section>
+            <!-- 測試toggle按鈕測試toggle按鈕測試toggle按鈕測試toggle按鈕測試toggle按鈕測試toggle按鈕測試toggle按鈕 -->
+            <section class="jing-section btn">
+                <img class="jing-section-btn" src="./img/navm-enu-list.png" alt="navm-enu-list">
+            </section>
+
+
+
+            <!-- 漢堡條 測試toggle按鈕測試toggle按鈕測試toggle按鈕測試toggle按鈕測試toggle按鈕測試toggle按鈕測試toggle按鈕 -->
+            <div class="container menu">
+                <div class="nav-ham">
+                    <div class="mine-menu">
+                        <!----------------------------- 關於我們 ------------------------------------>
+                        <div class="menu-about">
+                            <a href="#section_about_us">
+                                <div class="about-img">
+                                    <img class="main-menu-about" src="./img/icon1.png" alt="about-icon">
+                                    <img class="main-menu-about-gold" src="./img/icon1_gold.png" alt="about-icon">
+                                </div>
+                                <div class="main-menu-text">
+                                    <div class="main-menu-text-ch">關於我們</div>
+                                    <div class="main-menu-text-en">ABOUT</div>
+                                </div>
+                            </a>
+                        </div>
+                        <!----------------------------- 產品經銷 ------------------------------------>
+                        <div class="menu-distribution">
+                            <a href="#distribution">
+                                <div class="distribution-img">
+                                    <img class="main-menu-distribution" src="./img/icon6.png"
+                                        alt="distribution-icon">
+                                    <img class="main-menu-distribution-gold" src="./img/icon6_gold.png"
+                                        alt="distribution-gold-icon">
+                                </div>
+                                <div class="main-menu-text">
+                                    <span class="main-menu-text-ch">產品經銷</span>
+                                    <span class="main-menu-text-en">DISTRIBUTION</span>
+                                </div>
+                            </a>
+                        </div>
+                        <!----------------------------- 熱門經典 ------------------------------------>
+                        <div class="menu-classic">
+                            <a href="#section_classical">
+                                <div class="classic-img">
+                                    <img class="main-menu-classic" src="./img/icon3.png" alt="classic-icon">
+                                    <img class="main-menu-classic-gold" src="./img/icon3_gold.png"
+                                        alt="classic-gold-icon">
+                                </div>
+                                <div class="main-menu-text">
+                                    <span class="main-menu-text-ch">熱門經典</span>
+                                    <span class="main-menu-text-en">CLASSIC</span>
+                                </div>
+                            </a>
+                        </div>
+                        <!----------------------------- 媒體露出 ------------------------------------>
+                        <div class="menu-media">
+                            <a href="#section_media">
+                                <div class="media-img">
+                                    <img class="main-menu-media" src="./img/icon4.png" alt="media-icon">
+                                    <img class="main-menu-media-gold" src="./img/icon4_gold.png" alt="media-icon-icon">
+                                </div>
+                                <div class="main-menu-text">
+                                    <span class="main-menu-text-ch">媒體露出</span>
+                                    <span class="main-menu-text-en">MEDIA</span>
+                                </div>
+                            </a>
+                        </div>
+                        <!----------------------------- 加盟專區 ------------------------------------>
+                        <div class="menu-franchisee">
+                            <a href="#section_franchisee">
+                                <div class="franchisee-img">
+                                    <img class="main-menu-franchisee" src="./img/icon5.png" alt="franchisee-icon">
+                                    <img class="main-menu-franchisee-gold" src="./img/icon5_gold.png"
+                                        alt="franchisee-gold-icon">
+                                </div>
+                                <div class="main-menu-text">
+                                    <span class="main-menu-text-ch">加盟專區</span>
+                                    <span class="main-menu-text-en">FRANCHISEE</span>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="mine-menu-btn">
+                            <!----------------------------- 語言選擇 ------------------------------------>
+                            <div class="swiper-container">
+                                <div class="swiper-wrapper"
+                                    style="transition-duration: 0ms; transform: translate3d(-158px, 0px, 0px);">
+                                    <div class="swiper-slide">
+                                        <a href="https://tigersugar.com/">繁體中文</a>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <a href="https://en.tigersugar.com/">English</a>
+                                    </div>
+                                </div>
+                                <!-- Add Arrows -->
+                                <div class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide"
+                                    aria-disabled="true"></div>
+                                <div class="swiper-button-prev" tabindex="0" role="button" aria-label="Previous slide"
+                                    aria-disabled="false"></div>
+                                <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
+                            </div>
+                            <!----------------------------- 社群連結 ------------------------------------>
+                            <div class="social-menu-icon">
+                                <img class="social-menu-icon-fb" src="./img/fb.png" alt="icon-fb">
+                                <img class="social-menu-icon-ig" src="./img/ig.png" alt="social-menu-icon-ig">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <!-- 秋 選單紀錄 按鈕 -->
+        <a href="" class="shop-cart-container">
+            <img class="shop-cart" src="./img/shop_cart_button.svg">
+            <div class="shop-cart-amount-area">
+                <img class="shop-cart-amount" src="./img/amount.svg">
+                <div class="shop-cart-number">0</div>
+            </div>
+        </a>
+
+        <!-- 秋 top 按鈕 -->
+        <div class="go-to-top-container topbtn">
+            <!-- "#"回到最上方 -->
+            <a href="#"><img class="go-to-top" src="./img/go_to_top.svg" alt="go_to_top"></a>
+        </div>
+    </header>
 
     <main>
         <!-- 夫 banner -->
@@ -1143,7 +1383,9 @@
     </main>
 
     <!-- 秋 footer -->
-    <footer></footer>
+    <footer>
+        <p class="footer-text">Copyright © 201811 Tigersugar International Enterprise Co., Ltd.</p>
+    </footer>
 
     <!-- aos js -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
