--- a/distribution.html
+++ b/distribution.html
@@ -112,7 +112,7 @@
                         src="/img/add_for_ask_hover.svg"
                         alt="黃色詢問框hover"
                     /></a>
-                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
+                    <button class="product-background-hover-more">MORE</button>
                   </div>
                 </div>
               </div>
@@ -143,7 +143,7 @@
                         src="/img/add_for_ask_hover.svg"
                         alt="黃色詢問框hover"
                     /></a>
-                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
+                    <button class="product-background-hover-more">MORE</button>
                   </div>
                 </div>
               </div>
@@ -173,7 +173,7 @@
                         src="/img/add_for_ask_hover.svg"
                         alt="黃色詢問框hover"
                     /></a>
-                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
+                    <button class="product-background-hover-more">MORE</button>
                   </div>
                 </div>
               </div>
@@ -203,7 +203,7 @@
                         src="/img/add_for_ask_hover.svg"
                         alt="黃色詢問框hover"
                     /></a>
-                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
+                    <button class="product-background-hover-more">MORE</button>
                   </div>
                 </div>
               </div>
@@ -233,7 +233,7 @@
                         src="/img/add_for_ask_hover.svg"
                         alt="黃色詢問框hover"
                     /></a>
-                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
+                    <button class="product-background-hover-more">MORE</button>
                   </div>
                 </div>
               </div>
@@ -263,7 +263,7 @@
                         src="/img/add_for_ask_hover.svg"
                         alt="黃色詢問框hover"
                     /></a>
-                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
+                    <button class="product-background-hover-more">MORE</button>
                   </div>
                 </div>
               </div>
@@ -293,7 +293,7 @@
                         src="/img/add_for_ask_hover.svg"
                         alt="黃色詢問框hover"
                     /></a>
-                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
+                    <button class="product-background-hover-more">MORE</button>
                   </div>
                 </div>
               </div>
@@ -323,7 +323,7 @@
                         src="/img/add_for_ask_hover.svg"
                         alt="黃色詢問框hover"
                     /></a>
-                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
+                    <button class="product-background-hover-more">MORE</button>
                   </div>
                 </div>
               </div>
@@ -354,7 +354,7 @@
                         src="/img/add_for_ask_hover.svg"
                         alt="黃色詢問框hover"
                     /></a>
-                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
+                    <button class="product-background-hover-more">MORE</button>
                   </div>
                 </div>
               </div>
