修改圖片連結名稱+hover
修改圖片連結名稱+hover

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                         <a href="#section_about_us" class="about-link">
                             <div class="about-img">
                                 <div class="main-menu-img">
-                                    <img class="main-menu-about" src="./img/icon1.png" alt="about-icon">
-                                    <img class="main-menu-about-gold" src="./img/icon1_gold.png" alt="about-icon">
+                                    <img class="main-menu-about" src="./img/about.png" alt="about-icon">
+                                    <img class="main-menu-about-gold" src="./img/about-gold.png" alt="about-icon">
                                 </div>
                             </div>
                             <div class="main-menu-text">
@@ -70,8 +70,8 @@
                     <div class="distribution">
                         <a href="#distribution" class="distribution-link">
                             <div class="main-menu-img">
-                                <img class="main-menu-distribution" src="./img/icon6.png" alt="distribution-icon">
-                                <img class="main-menu-distribution-gold" src="./img/icon6_gold.png"
+                                <img class="main-menu-distribution" src="./img/distribution.png" alt="distribution-icon">
+                                <img class="main-menu-distribution-gold" src="./img/distribution-gold.png"
                                     alt="distribution-gold-icon">
                             </div>
                             <div class="main-menu-text">
@@ -84,8 +84,8 @@
                     <div class="classic">
                         <a href="#section_classical" class="classic-link">
                             <div class="main-menu-img">
-                                <img class="main-menu-classic" src="./img/icon3.png" alt="classic-icon">
-                                <img class="main-menu-classic-gold" src="./img/icon3_gold.png" alt="classic-gold-icon">
+                                <img class="main-menu-classic" src="./img/classic.png" alt="classic-icon">
+                                <img class="main-menu-classic-gold" src="./img/classic-gold.png" alt="classic-gold-icon">
                             </div>
                             <div class="main-menu-text">
                                 <span class="text-ch">熱門經典</span>
@@ -97,8 +97,8 @@
                     <div class="media">
                         <a href="#section_media" class="media-link">
                             <div class="main-menu-img">
-                                <img class="main-menu-media" src="./img/icon4.png" alt="media-icon">
-                                <img class="main-menu-media-gold" src="./img/icon4_gold.png" alt="media-icon-icon">
+                                <img class="main-menu-media" src="./img/media.png" alt="media-icon">
+                                <img class="main-menu-media-gold" src="./img/media-gold.png" alt="media-icon-icon">
                             </div>
                             <div class="main-menu-text">
                                 <span class="text-ch">媒體露出</span>
@@ -110,8 +110,8 @@
                     <div class="franchisee">
                         <a href="#section_franchisee" class="franchisee-link">
                             <div class="main-menu-img">
-                                <img class="main-menu-franchisee" src="./img/icon5.png" alt="franchisee-icon">
-                                <img class="main-menu-franchisee-gold" src="./img/icon5_gold.png"
+                                <img class="main-menu-franchisee" src="./img/franchisee.png" alt="franchisee-icon">
+                                <img class="main-menu-franchisee-gold" src="./img/franchisee-gold.png"
                                     alt="franchisee-gold-icon">
                             </div>
                             <div class="main-menu-text">
@@ -172,8 +172,8 @@
                                 <div class="menu-about">
                                     <a href="#section_about_us">
                                         <div class="about-img">
-                                            <img class="main-menu-about" src="./img/icon1.png" alt="about-icon">
-                                            <img class="main-menu-about-gold" src="./img/icon1_gold.png"
+                                            <img class="main-menu-about" src="./img/about.png" alt="about-icon">
+                                            <img class="main-menu-about-gold" src="./img/about-gold.png"
                                                 alt="about-icon">
                                         </div>
                                         <div class="main-menu-text">
@@ -186,9 +186,9 @@
                                 <div class="menu-distribution">
                                     <a href="#distribution">
                                         <div class="distribution-img">
-                                            <img class="main-menu-distribution" src="./img/icon6.png"
+                                            <img class="main-menu-distribution" src="./img/distribution.png"
                                                 alt="distribution-icon">
-                                            <img class="main-menu-distribution-gold" src="./img/icon6_gold.png"
+                                            <img class="main-menu-distribution-gold" src="./img/distribution-gold.png"
                                                 alt="distribution-gold-icon">
                                         </div>
                                         <div class="main-menu-text">
@@ -201,8 +201,8 @@
                                 <div class="menu-classic">
                                     <a href="#section_classical">
                                         <div class="classic-img">
-                                            <img class="main-menu-classic" src="./img/icon3.png" alt="classic-icon">
-                                            <img class="main-menu-classic-gold" src="./img/icon3_gold.png"
+                                            <img class="main-menu-classic" src="./img/classic.png" alt="classic-icon">
+                                            <img class="main-menu-classic-gold" src="./img/classic-gold.png"
                                                 alt="classic-gold-icon">
                                         </div>
                                         <div class="main-menu-text">
@@ -215,8 +215,8 @@
                                 <div class="menu-media">
                                     <a href="#section_media">
                                         <div class="media-img">
-                                            <img class="main-menu-media" src="./img/icon4.png" alt="media-icon">
-                                            <img class="main-menu-media-gold" src="./img/icon4_gold.png"
+                                            <img class="main-menu-media" src="./img/media.png" alt="media-icon">
+                                            <img class="main-menu-media-gold" src="./img/media-gold.png"
                                                 alt="media-icon-icon">
                                         </div>
                                         <div class="main-menu-text">
@@ -229,9 +229,9 @@
                                 <div class="menu-franchisee">
                                     <a href="#section_franchisee">
                                         <div class="franchisee-img">
-                                            <img class="main-menu-franchisee" src="./img/icon5.png"
+                                            <img class="main-menu-franchisee" src="./img/franchisee.png"
                                                 alt="franchisee-icon">
-                                            <img class="main-menu-franchisee-gold" src="./img/icon5_gold.png"
+                                            <img class="main-menu-franchisee-gold" src="./img/franchisee-gold.png"
                                                 alt="franchisee-gold-icon">
                                         </div>
                                         <div class="main-menu-text">
