--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <section class="main-menu">
                     <!----------------------------- 關於我們 ------------------------------------>
                     <div class="about">
-                        <a href="#section_about_us" class="about-link">
+                        <a href="#about" class="about-link">
                             <div class="about-img">
                                 <div class="main-menu-img">
                                     <img class="main-menu-about" src="./img/about.png" alt="about-icon">
@@ -82,7 +82,7 @@
                     </div>
                     <!----------------------------- 熱門經典 ------------------------------------>
                     <div class="classic">
-                        <a href="#section_classical" class="classic-link">
+                        <a href="#classical" class="classic-link">
                             <div class="main-menu-img">
                                 <img class="main-menu-classic" src="./img/classic.png" alt="classic-icon">
                                 <img class="main-menu-classic-gold" src="./img/classic-gold.png" alt="classic-gold-icon">
@@ -95,7 +95,7 @@
                     </div>
                     <!----------------------------- 媒體露出 ------------------------------------>
                     <div class="media">
-                        <a href="#section_media" class="media-link">
+                        <a href="#media" class="media-link">
                             <div class="main-menu-img">
                                 <img class="main-menu-media" src="./img/media.png" alt="media-icon">
                                 <img class="main-menu-media-gold" src="./img/media-gold.png" alt="media-icon-icon">
@@ -108,7 +108,7 @@
                     </div>
                     <!----------------------------- 加盟專區 ------------------------------------>
                     <div class="franchisee">
-                        <a href="#section_franchisee" class="franchisee-link">
+                        <a href="#franchisee" class="franchisee-link">
                             <div class="main-menu-img">
                                 <img class="main-menu-franchisee" src="./img/franchisee.png" alt="franchisee-icon">
                                 <img class="main-menu-franchisee-gold" src="./img/franchisee-gold.png"
@@ -170,7 +170,7 @@
                             <div class="top-mine-menu">
                                 <!----------------------------- 關於我們 ------------------------------------>
                                 <div class="menu-about">
-                                    <a href="#section_about_us">
+                                    <a href="#about">
                                         <div class="about-img">
                                             <img class="main-menu-about" src="./img/about.png" alt="about-icon">
                                             <img class="main-menu-about-gold" src="./img/about-gold.png"
@@ -199,7 +199,7 @@
                                 </div>
                                 <!----------------------------- 熱門經典 ------------------------------------>
                                 <div class="menu-classic">
-                                    <a href="#section_classical">
+                                    <a href="#classical">
                                         <div class="classic-img">
                                             <img class="main-menu-classic" src="./img/classic.png" alt="classic-icon">
                                             <img class="main-menu-classic-gold" src="./img/classic-gold.png"
@@ -213,7 +213,7 @@
                                 </div>
                                 <!----------------------------- 媒體露出 ------------------------------------>
                                 <div class="menu-media">
-                                    <a href="#section_media">
+                                    <a href="#media">
                                         <div class="media-img">
                                             <img class="main-menu-media" src="./img/media.png" alt="media-icon">
                                             <img class="main-menu-media-gold" src="./img/media-gold.png"
@@ -227,7 +227,7 @@
                                 </div>
                                 <!----------------------------- 加盟專區 ------------------------------------>
                                 <div class="menu-franchisee">
-                                    <a href="#section_franchisee">
+                                    <a href="#franchisee">
                                         <div class="franchisee-img">
                                             <img class="main-menu-franchisee" src="./img/franchisee.png"
                                                 alt="franchisee-icon">
