語言swiper嘗試-更新
語言swiper嘗試-更新

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                     <div class="distribution">
                         <a href="#distribution" class="distribution-link">
                             <div class="main-menu-img">
-                                <img class="main-menu-distribution" src="./img/distribution.png" alt="distribution-icon">
+                                <img class="main-menu-distribution" src="./img/distribution.png"
+                                    alt="distribution-icon">
                                 <img class="main-menu-distribution-gold" src="./img/distribution-gold.png"
                                     alt="distribution-gold-icon">
                             </div>
@@ -85,7 +86,8 @@
                         <a href="#classical" class="classic-link">
                             <div class="main-menu-img">
                                 <img class="main-menu-classic" src="./img/classic.png" alt="classic-icon">
-                                <img class="main-menu-classic-gold" src="./img/classic-gold.png" alt="classic-gold-icon">
+                                <img class="main-menu-classic-gold" src="./img/classic-gold.png"
+                                    alt="classic-gold-icon">
                             </div>
                             <div class="main-menu-text">
                                 <span class="text-ch">熱門經典</span>
@@ -263,8 +265,12 @@
                                                 </a>
                                             </div>
                                         </div>
-                                        <div class="swiper-button-next header-button-next"></div>
-                                        <div class="swiper-button-prev header-button-prev"></div>
+                                        <div class="swiper-button-next" tabindex="0" role="button"
+                                            aria-label="Next slide" aria-disabled="false">
+                                        </div>
+                                        <div class="swiper-button-prev swiper-button-disabled" tabindex="0"
+                                            role="button" aria-label="Previous slide" aria-disabled="true">
+                                        </div>
                                     </div>
                                 </div>
                                 <!----------------------------- 社群連結 ------------------------------------>
