--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                                 </div>
                                 <!----------------------------- 熱門經典 ------------------------------------>
                                 <div class="menu-classic">
-                                    <a href="#classical">
+                                    <a href="#classic">
                                         <div class="classic-img">
                                             <img class="main-menu-classic" src="./img/classic.png" alt="classic-icon">
                                             <img class="main-menu-classic-gold" src="./img/classic-gold.png"
