--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     </div>
                     <!----------------------------- 熱門經典 ------------------------------------>
                     <div class="classic">
-                        <a href="#classical" class="classic-link">
+                        <a href="#classic" class="classic-link">
                             <div class="main-menu-img">
                                 <img class="main-menu-classic" src="./img/classic.png" alt="classic-icon">
                                 <img class="main-menu-classic-gold" src="./img/classic-gold.png"
@@ -201,7 +201,7 @@
                                 </div>
                                 <!----------------------------- 熱門經典 ------------------------------------>
                                 <div class="menu-classic">
-                                    <a href="#classical">
+                                    <a href="#classic">
                                         <div class="classic-img">
                                             <img class="main-menu-classic" src="./img/classic.png" alt="classic-icon">
                                             <img class="main-menu-classic-gold" src="./img/classic-gold.png"
@@ -265,14 +265,12 @@
                                                 </a>
                                             </div>
                                         </div>
-                                        <div class="swiper-button-next" tabindex="0" role="button"
-                                            aria-label="Next slide" aria-disabled="false">
+                                        <div class="swiper-button-next header-button-next">
+                                            <img src="/img/swiper-button-next.svg alt="button-next">
                                         </div>
-                                        <div class="swiper-button-prev swiper-button-disabled" tabindex="0"
-                                            role="button" aria-label="Previous slide" aria-disabled="true">
+                                        <div class="swiper-button-prev header-button-prev">
+                                            <img src="/img/swiper-button-prev.svg alt="button-prev">
                                         </div>
-                                    </div>
-                                </div>
                                 <!----------------------------- 社群連結 ------------------------------------>
                                 <div class="social-menu-icon">
                                     <a href="" title="老虎堂FB">
