--- a/index.html
+++ b/index.html
@@ -266,10 +266,10 @@
                                             </div>
                                         </div>
                                         <div class="swiper-button-next header-button-next">
-                                            <img src="/img/swiper-button-next.svg alt="button-next">
+                                            <!-- <img src="/img/swiper-button-next.svg alt="button-next"> -->
                                         </div>
                                         <div class="swiper-button-prev header-button-prev">
-                                            <img src="/img/swiper-button-prev.svg alt="button-prev">
+                                            <!-- <img src="/img/swiper-button-prev.svg alt="button-prev"> -->
                                         </div>
                                 <!----------------------------- 社群連結 ------------------------------------>
                                 <div class="social-menu-icon">
