--- a/index.html
+++ b/index.html
@@ -271,6 +271,8 @@
                                         <div class="swiper-button-prev header-button-prev">
                                             <!-- <img src="/img/swiper-button-prev.svg alt="button-prev"> -->
                                         </div>
+                                    </div>
+                                </div>
                                 <!----------------------------- 社群連結 ------------------------------------>
                                 <div class="social-menu-icon">
                                     <a href="" title="老虎堂FB">
@@ -282,7 +284,6 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
