dropdown menu內容點擊後可收起

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         <div class="flex-mine-menu">
                             <div class="top-mine-menu">
                                 <!----------------------------- 關於我們 ------------------------------------>
-                                <a href="#about">
+                                <a href="#about" id="drop-about">
                                     <div class="menu-about">
                                         <div class="about-img">
                                             <img class="main-menu-about" src="./img/about.png" alt="about-icon">
@@ -185,7 +185,7 @@
                                     </div>
                                 </a>
                                 <!----------------------------- 產品經銷 ------------------------------------>
-                                <a href="#distribution">
+                                <a href="#distribution" id="drop-distribution">
                                     <div class="menu-distribution">
                                         <div class="distribution-img">
                                             <img class="main-menu-distribution" src="./img/distribution.png"
@@ -200,7 +200,7 @@
                                     </div>
                                 </a>
                                 <!----------------------------- 熱門經典 ------------------------------------>
-                                <a href="#classic">
+                                <a href="#classic" id="drop-classic">
                                     <div class="menu-classic">
                                         <div class="classic-img">
                                             <img class="main-menu-classic" src="./img/classic.png" alt="classic-icon">
@@ -214,7 +214,7 @@
                                     </div>
                                 </a>
                                 <!----------------------------- 媒體露出 ------------------------------------>
-                                <a href="#media">
+                                <a href="#media" id="drop-media">
                                     <div class="menu-media">
                                         <div class="media-img">
                                             <img class="main-menu-media" src="./img/media.png" alt="media-icon">
@@ -228,7 +228,7 @@
                                     </div>
                                 </a>
                                 <!----------------------------- 加盟專區 ------------------------------------>
-                                <a href="#franchisee">
+                                <a href="#franchisee" id="drop-franchisee">
                                     <div class="menu-franchisee">
                                         <div class="franchisee-img">
                                             <img class="main-menu-franchisee" src="./img/franchisee.png"
