--- a/franchisee.html
+++ b/franchisee.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  
+  <!-- 共同css -->
+  <link rel="stylesheet" href="/css/common.css">
+
+  <!-- 9/20 新加盟專區css (之後另行命名) -->
+  <link rel="stylesheet" href="/css/Franchisee-new-0920.css">
 </head>
 <body>
     <header></header>
@@ -11,7 +17,32 @@
     <main>
 
       <!-- 翔 授權流程 -->
-      <section></section>
+      <section id="authorization">
+        <!-- 主要背景 -->
+        <div class="background">
+          <div class="background-wave">
+            <div class="background-tiger-logo">
+            </div>
+          </div>
+          <!-- 主要區域 -->
+          <div class="container">
+            <!-- 加盟專區中英文logo -->
+            <div class="franchisee-logo">
+              <div class="franchisee-logo-img">
+                <img src="/img/franchisee.png" alt="加盟專區Logo">
+              </div>
+              <div class="franchisee-logo-cn-en">
+                <div class="franchisee-logo-cn">加盟專區</div>
+                <div class="franchisee-logo-en">FRANCHISEE</div>
+              </div>
+            </div>
+            <!-- 老虎堂logo -->
+            <div class="tiger-main-logo">
+              <img src="/img/logo- Join Our Franchise!.svg" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!-- 夫 常見問題 -->
       <section></section>
